# exmpkg_maproja

./: .gitignore  LICENSE  pyproject.toml
src/exmpkg_maproja/: main.py
